# ai-control-plane

./: .gitignore  CHANGELOG.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PHASE_4.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PHASES_4_7_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_ENGINE_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_MONETIZATION.md  PLATFORM.md  PLATFORM_QUICKSTART.md  PRODUCTION_ENHANCEMENTS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TRANSFORMATION_SUMMARY.md  coverage.xml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yaml  deploy.yaml
approval/: __init__.py  models.py  queue.py  service.py  workflows.py
auth/: __init__.py  identity.py  models.py  oidc.py  service.py
cli/: acp.py
control_plane/: __init__.py
control_plane/policy/: INTEGRATION_GUIDE.md  README.md
control_plane/policy/engine/: adapter.py  evaluator.py  loader.py
control_plane/policy/policies/examples/: dev_pii_allow.yaml  financial_prod_review.yaml  high_risk_review.yaml  prod_banned_deny.yaml  prod_pii_requires_review.yaml
control_plane/policy/schemas/: context.py  decision.py  policy_schema.py
core/: README.md  __init__.py  config_loader.py  error_formatter.py
core/models/: __init__.py  agent.py  approval.py  decision.py  event.py  model.py  policy.py  prompt.py  request.py  risk.py
dashboard/: __init__.py  app.py
dashboard/templates/: dashboard.html
demo/: kill_agent.py  platform_demo.py  production_features.py  register_agent.py  run_normal.py  trigger_violation.py
deployments/: README.md
deployments/helm/ai-control-plane/: Chart.yaml  values.yaml
deployments/helm/ai-control-plane/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployments/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml
docs/: PHASE_2_COMPLETE.md  architecture.md  cli-guide.md  compliance-guide.md  demo-walkthrough.md  deployment-guide.md  identity-and-observability.md  phase2-implementation-guide.md  plugin-development.md  policy-spec.md  rbac-guide.md  threat-model.md
examples/: hello_governance.py  monetization_demo.py  sdk_walkthrough.py
examples/configs/: agents.yaml
examples/plugins/: evaluator_example.py  hooks_example.py  risk_engine_example.py
gateway/: __init__.py  errors.py  executor.py  fail_closed.py  main.py  middleware.py  routes.py  services.py
kill_switch/: __init__.py  service.py  state.py
observability/: __init__.py  analytics.py  audit_trail.py  decision_records.py  events.py  immutable_audit.py  logger.py  replay.py  storage.py
policy/: DECLARATIVE_ENGINE.md  __init__.py  declarative_engine.py  defaults.py  dsl.py  evaluator.py  explainer.py  parser.py  plugin_loader.py  plugins.py  schemas.py  violations.py
policy/compliance/: __init__.py  eu-ai-act.yaml  evidence.py  gdpr.yaml  hipaa.yaml  loader.py  nist-ai-rmf.yaml  pci-dss.yaml  soc2.yaml  validator.py
pricing/: README.md  __init__.py  license.py  metering.py  models.py  routes.py  service.py
registry/: __init__.py  models.py  service.py  storage.py
scripts/: populate_test_data.py  reset_env.py  seed_demo_data.py
sdk/: README.md  __init__.py
sdk/python/: __init__.py  client.py  exceptions.py
sdk/typescript/: README.md  package.json
sdk/typescript/src/: index.ts  types.ts
tests/: __init__.py  test_audit_trail.py  test_auth.py  test_compliance.py  test_core_models.py  test_decision_records.py  test_declarative_engine.py  test_fail_closed.py  test_gateway.py  test_identity_tracking.py  test_immutable_audit.py  test_kill_switch.py  test_plugins.py  test_policy.py  test_policy_adapter.py  test_policy_dsl.py  test_policy_engine.py  test_pricing.py  test_registry.py
