[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-control-plane"
version = "1.0.0"
description = "Production-grade AI Governance Platform - The Operating System for Enterprise AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI Control Plane Contributors"}
]
keywords = ["ai", "governance", "policy", "audit", "control-plane", "compliance", "rbac", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/Arnoldlarry15/ai-control-plane"
Documentation = "https://github.com/Arnoldlarry15/ai-control-plane/tree/main/docs"
Repository = "https://github.com/Arnoldlarry15/ai-control-plane"
Issues = "https://github.com/Arnoldlarry15/ai-control-plane/issues"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.setuptools]
packages = [
    "core",
    "core.models",
    "gateway",
    "registry", 
    "policy",
    "policy.compliance",
    "control_plane",
    "control_plane.policy",
    "control_plane.policy.schemas",
    "control_plane.policy.engine",
    "control_plane.policy.policies",
    "control_plane.policy.policies.examples",
    "observability",
    "approval",
    "kill_switch",
    "auth",
    "dashboard",
    "sdk",
    "sdk.python",
    "cli",
]

[tool.setuptools.package-data]
"policy.compliance" = ["*.yaml"]
"control_plane.policy.policies.examples" = ["*.yaml", "*.json"]
"dashboard" = ["templates/*.html"]

[project.scripts]
acp = "cli.acp:main"
